public interface IAudioBook {
    // Intentionally left empty
}